<resources>
    <string name="app_name">quiznight</string>
    <string name="scoreText">0</string>
    <string name="likeText">3</string>
    <string name="time">00:30</string>
    <string name="qu_text">kh tgioerfqdmol hkegjezokpae irugtejzksd</string>
    <string name="ans_text">kh tgioerfqdmol hkegjezokpae irugtejzksd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>